name:                pipes-crypto
version:             0.1.0.0
synopsis:            Cryptographic support for the 'pipes' library
homepage:            http://github.com/ocharles/pipes-crypto
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Proxy.Crypto
  build-depends:
    base >= 4.5 && < 5,
    pipes >= 3.3,
    bytestring >= 0.9,
    ghc-prim >= 0.2,
    tagged >= 0.6,
    crypto-api >= 0.12,
    cereal >= 0.3.5.2
  hs-source-dirs:      src
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
